--- a/app/src/main/res/navigation/bottom_nav.xml
+++ b/app/src/main/res/navigation/bottom_nav.xml
@@ -26,7 +26,7 @@
 <!--        tools:layout="@layout/fragment_coin" />-->
     <fragment
         android:id="@+id/menu_account"
-        android:name="com.example.prm392_team1_spaapp.fragment.SettingAccountFragment"
+        android:name="com.example.prm392_team1_spaapp.fragment.AccountFragment"
         android:label="fragment_account"
-        tools:layout="@layout/activity_setting_acount" />
+        tools:layout="@layout/activity_account" />
 </navigation>
