--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/edit_user_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
