--- a/app/src/main/res/layout/activity_account_setting.xml
+++ b/app/src/main/res/layout/activity_account_setting.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".activity.AccountSettingActivity">
+    tools:context=".AccountSettingActivity">
+
+    <include layout="@layout/toolbar_activity_account_setting" />
 
     <TextView
         android:id="@+id/textView9"
@@ -29,18 +31,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-    <include layout="@layout/toolbar_activity_account_setting" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rec_chapters"
-        android:layout_width="394dp"
-        android:layout_height="324dp"
-        android:layout_marginTop="292dp"
-        android:background="@android:color/transparent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
@@ -94,26 +85,102 @@
         app:layout_constraintTop_toBottomOf="@+id/switch1"
         app:srcCompat="@drawable/baseline_arrow_forward_ios_24" />
 
+
+    <android.widget.LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView9">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="18dp"
+                android:text="Đổi mật khẩu"
+                android:textStyle="bold"
+                android:layout_marginStart="10dp"
+                android:layout_gravity="center_vertical" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="18dp"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:text=""
+                android:layout_marginEnd="10dp"
+                android:layout_gravity="center_vertical" />
+
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/baseline_arrow_forward_ios_24"
+                android:layout_gravity="center_vertical" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="18dp"
+                android:text="Điều khoản sử dụng"
+                android:textStyle="bold"
+                android:layout_marginStart="10dp"
+                android:layout_gravity="center_vertical" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="18dp"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:text=""
+                android:layout_marginEnd="10dp"
+                android:layout_gravity="center_vertical" />
+
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/baseline_arrow_forward_ios_24"
+                android:layout_gravity="center_vertical" />
+        </LinearLayout>
+
+    </android.widget.LinearLayout>
+
     <TextView
         android:id="@+id/textView13"
         android:layout_width="91dp"
         android:layout_height="32dp"
+        android:layout_marginBottom="30dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="40dp"
         android:text="Đăng xuất"
         android:textColor="#FF0000"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/rec_chapters" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView2" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="27dp"
         android:layout_height="32dp"
+        android:layout_marginBottom="30dp"
         android:layout_marginStart="120dp"
-        android:layout_marginTop="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rec_chapters"
         app:srcCompat="@drawable/baseline_logout_24" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
