--- a/app/src/main/res/layout/toolbar_activity_account_setting.xml
+++ b/app/src/main/res/layout/toolbar_activity_account_setting.xml
@@ -8,26 +8,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/primary"
-        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:padding="10dp">
 
 
         <ImageView
-            android:id="@+id/user_profile_back"
+            android:id="@+id/back_id"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/baseline_arrow_back_24"
-            android:layout_alignParentLeft="true"/>
+            android:layout_alignParentLeft="true"
+            android:backgroundTint="@color/white"
+            android:src="@drawable/baseline_arrow_back_24" />
 
         <TextView
-            android:layout_width="331dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textAlignment="center"
-            android:paddingTop="5dp"
-            android:paddingRight="30dp"
-            android:text="Ngân hàng"
+            android:paddingLeft="20dp"
+            android:text="Thiết lập tài khoản"
             android:textColor="@android:color/white"
             android:textSize="20dp"
             android:textStyle="bold" />
