--- a/app/src/main/res/layout/toolbar_activity_user_profile.xml
+++ b/app/src/main/res/layout/toolbar_activity_user_profile.xml
@@ -18,9 +18,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/baseline_arrow_back_24"
-            android:layout_alignParentLeft="true"
-
-            />
+            android:layout_alignParentLeft="true"/>
 
         <TextView
             android:layout_weight="1"
