--- a/app/src/main/res/navigation/bottom_nav.xml
+++ b/app/src/main/res/navigation/bottom_nav.xml
@@ -8,7 +8,7 @@
         android:id="@+id/menu_home"
         android:name="com.example.prm392_team1_spaapp.fragment.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/activity_home" />
+        tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/menu_history"
         android:name="com.example.prm392_team1_spaapp.fragment.HistoryFragment"
@@ -19,14 +19,14 @@
 <!--        android:name="fpt.edu.pay.fragment.QrFragment"-->
 <!--        android:label="fragment_qr"-->
 <!--        tools:layout="@layout/fragment_qr" />-->
-<!--    <fragment-->
-<!--        android:id="@+id/menu_coin"-->
-<!--        android:name="fpt.edu.pay.fragment.CoinFragment"-->
-<!--        android:label="fragment_coin"-->
-<!--        tools:layout="@layout/fragment_coin" />-->
+    <fragment
+        android:id="@+id/menu_promotion"
+        android:name="com.example.prm392_team1_spaapp.fragment.PromotionFragment"
+        android:label="fragment_promotion"
+        tools:layout="@layout/fragment_promotion" />
     <fragment
         android:id="@+id/menu_account"
         android:name="com.example.prm392_team1_spaapp.fragment.AccountFragment"
         android:label="fragment_account"
-        tools:layout="@layout/activity_account" />
+        tools:layout="@layout/fragment_account" />
 </navigation>
