--- a/app/src/main/res/layout/activity_account_setting.xml
+++ b/app/src/main/res/layout/activity_account_setting.xml
@@ -87,6 +87,7 @@
 
 
     <android.widget.LinearLayout
+        android:id="@+id/linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -159,28 +160,28 @@
         </LinearLayout>
 
     </android.widget.LinearLayout>
-
+    <LinearLayout
+        android:id="@+id/layout_logout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintBottom_toBottomOf="parent">
     <TextView
         android:id="@+id/textView13"
         android:layout_width="91dp"
         android:layout_height="32dp"
-        android:layout_marginBottom="30dp"
-        android:layout_marginStart="12dp"
+        android:layout_margin="15dp"
         android:text="Đăng xuất"
         android:textColor="#FF0000"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView2" />
+        android:textSize="20sp"/>
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="27dp"
         android:layout_height="32dp"
-        android:layout_marginBottom="30dp"
-        android:layout_marginStart="120dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/baseline_logout_24" />
-
+        android:src="@drawable/baseline_logout_24"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
