--- a/app/src/main/res/layout/fragment_history_booking.xml
+++ b/app/src/main/res/layout/fragment_history_booking.xml
@@ -8,9 +8,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Phone"
         android:layout_gravity="center"
-        android:textStyle="bold"/>
+        android:text="Unsupported!"
+        android:textStyle="bold" />
 
 
 </FrameLayout>
