--- a/app/src/main/res/layout/activity_recharge_withdraw.xml
+++ b/app/src/main/res/layout/activity_recharge_withdraw.xml
@@ -52,7 +52,7 @@
                     app:layout_constraintVertical_bias="0.352" />
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/tv_money"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
